Fixed all the major issues with the Contact section (align top, same width)

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,9 +1,9 @@
 .alignment-table
 {
+	display: inline-block;
 	vertical-align: top;
+	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-left: 5%;
-	margin-right: 5%;
 }
 .contact-email
 {
@@ -17,8 +17,9 @@
 .contact-portrait
 {
 	display: inline-block;
-	padding: 15px;
-	margin-right: 60px;
+	margin: 5px;
+	vertical-align: top;
+	width: 20vw;
 }
 .contact-image
 {
